added statusDetail into PnDeliveryRequest, fix flow of update status